feat: attempt at new portfolio view: see actual value of account over time that drops when you withdraw money and grows with portfolio value. Still not exactly right

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "papaparse": "^5.5.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "yahoo-finance2": "^3.11.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
