--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fuzzysort": "^3.1.0",
+    "lucide-react": "^0.563.0",
     "next": "16.1.1",
     "papaparse": "^5.5.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.6.0",
+    "tailwind-merge": "^3.4.0",
     "yahoo-finance2": "^3.11.2"
   },
   "devDependencies": {
