--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fuzzysort": "^3.1.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.1",
+    "openai": "^6.17.0",
     "papaparse": "^5.5.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
